    - Remove everything to do with nscd_nischeck.
    - Update linuxthreads-sizefix.diff for 2.4.
    - debian/shlibver: Bump up to 2.4-1.

  [ Denis Barbier ]
    - Remove complex-collate.diff (merged upstream).
    - Remove cvs-{localedata,iso4217,iso639,tzdata}.diff,
    - Remove from forward-backward-collation.diff a chunk merged upstream.

 -- Clint Adams <schizo@debian.org>  Mon,  6 Mar 2006 16:49:38 -0500

glibc (2.3.6-4) UNRELEASED; urgency=low

  * Set configure_build to the same value as configure_host for sparc
    optimized libraries (as on i386). This way they will be tested.
  * If the CPU has biarch support, run tests for cross-compiled libraries.
  * Remove ld.so from optimized libraries as it is not used.
  * Add regcomp_c.diff (Call __libc_lock_init after init_dfa) from upstream
    (Ulrich Drepper). This make possible to run the testsuite again on hppa.
  * Enable the testsuite on hppa.
  * Add tst-setcontext_c.diff (fix the arguments passed to setcontext during
    test) from upstream.
  * Create a link /usr/lib32 -> /emul/ia32-linux/usr/lib on amd64.
  
 -- Aurelien Jarno <aurel32@debian.org>  Thu,  2 Mar 2006 05:10:12 +0100

glibc (2.3.6-3) unstable; urgency=low

  [ Aurelien Jarno]
  * Use a shell function instead of ifneq when testing a variable depending on
    $(curpass), otherwise it is only evaluated at the first pass.
  * Add support for the ppc64 architecture.  (Closes: #301438).
  * Use the new slibdir, libdir, rtlddir variables to build the various
    flavours of the libc. Put them directly in the final directory, and
    remove the corresponding tweaks done after the make install phase.
  * Install the 32-bit libraries in /emul/ia32-linux(/usr)/lib on amd64.
  * Only create the multiarch directories and the symlinks in /lib/ldconfig
    for the main pass. Otherwise alternate libraries would conflict with the
    main one when using multiarch.
  * Fix the build-dependencies for kfreebsd-amd64.